...
          setLocale(next(displayLocales, locale))
        }}
      >
        {`${sample('Language')}: ${locale}`}
      </Button>
      <Button
        testID="dev-toolbar:theme"
        onPress={() => {
          set({ theme: next(themes, preferences.theme) })
        }}
      >
        {`${sample('Theme')}: ${preferences.theme}`}
      </Button>
...
