...
  return (
    <Screen title={title} testID={`${devMarker}:${page}`}>
      <DevToolbar />
      {page === 'index' ? null : (
        <Button
          variant="ghost"
          testID="dev-screen:index"
          onPress={() => {
            router.push(paths.dev.path)
          }}
        >
          {paths.dev.path}
        </Button>
...
